--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="style.css" type="text/css">
+  <script src="wtf-trace.js"></script>
   <script src="angular.js"></script>
   <script src="app.js"></script>
 </head>
